fix: レスポンス時に表示が崩れないようにgapを可変に修正

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -894,7 +894,7 @@ body {
 .p-recommend__list {
 	flex-direction: row;
 	gap: auto;
-	gap: 65px;
+	gap: 6.5%;
 	margin-top: 60px;
 	padding-inline: 0;
 }
